index html add subtitle

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div class="container">
     <h1 class="title"><span>JavaScript</span> Petricenco – Part 1</h1>
+    <h2 class="subtitle">Hello JavaScript 'Nicolae'</h2>
     <!-- <p>The switch Statement</p> -->
   </div>
   
