--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="container">
     <h1 class="title"><span>JavaScript</span> Petricenco – Part 1</h1>
     <h2 class="subtitle">Hello JavaScript 'Nicolae'</h2>
+    <h3 class="undrTitle">Under_Title</h3>
     <!-- <p>The switch Statement</p> -->
   </div>
   
